<resources>
    <string name="app_name">Tweet Lanes</string>
    <string name="app_launcher_name">Tweet Lanes</string>
    <string name="beta_launcher_name">Tweet Lanes Beta</string>
    <string name="app_tweet_spotlight_activity_name">Tweet</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="details">Details</string>
    <string name="location">Location</string>
    <string name="link">Link</string>
    <string name="more">More</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="follows_you">
        <i>follows you</i>
    </string>
    <string name="credits_oss_heading">Tweet Lanes uses the following open-source software:</string>
    <string name="credits_oss_items"><a href="https://github.com/chrisbanes/Android-PullToRefresh">
        Android-PullToRefresh</a>, Copyright 2013 Chris Banes.\n
        <a href="https://plus.google.com/117064558166627683075/posts">AOSP</a>, Copyright 2008-2013,
        Android Open Source Project.\n<a href="https://github.com/jasonpolites/gesture-imageview">
            GestureImageView</a>, Copyright 2012 Jason Polites.\n
        <a href="https://github.com/DHuckaby/Prime">Prime</a>, Copyright 2012 Daniel Huckaby.\n
        <a href="https://github.com/koush/UrlImageViewHelper">UrlImageViewHelper</a>, Copyright 2013
        Koushik Dutta.\n<a href="https://github.com/JakeWharton/Android-ViewPagerIndicator">
            ViewPagerIndicator</a>, Copyright 2012 Jake Wharton.\n
        <a href="https://github.com/MartinvanZ/Inscription">Inscription</a>,
        Copyright 2012 Martin van Zuilekom.\n
    </string>
    <string name="credits_art_items">Logo and promotional images created by
        <a href="https://plus.google.com/107629610345558527193/posts">Bruno Rime</a> and
        <a href="https://twitter.com/retareq">@retareq</a>. Used with permission.
    </string>
    <string name="credits_app_copyright">Copyright 2013, Chris Lacy.</string>
    <string name="credits_lacy_name">Chris Lacy</string>
    <string name="credits_lacy_networks">
        Twitter: <a href="https://twitter.com/chrismlacy">@chrismlacy</a>\n
        App.net: <a href="https://alpha.app.net/chrismlacy">@chrismlacy</a>\n
        GitHub: <a href="https://github.com/chrislacy">@chrislacy</a></string>
    <string name="credits_fammy_name">Jason Famularo</string>
    <string name="credits_fammy_networks">
        Twitter: <a href="https://twitter.com/splodn">@splodn</a>\n
        App.net: <a href="https://alpha.app.net/fam">@fam</a>\n
        GitHub: <a href="https://github.com/Fammy">@Fammy</a></string>
    <string name="credits_duffy_name">James Duffy</string>
    <string name="credits_duffy_networks">
        Twitter: <a href="https://twitter.com/duffy0">@duffy0</a>\n
        App.net: <a href="https://alpha.app.net/dffy">@dffy</a>\n
        GitHub: <a href="https://github.com/jamesduffy">@jamesduffy</a></string>
    <string name="credits_blythmeister_name">Chris Blyth</string>
    <string name="credits_blythmeister_networks">
        Twitter: <a href="https://twitter.com/BlythMeister">@BlythMeister</a>\n
        App.net: <a href="https://alpha.app.net/BlythMeister">@BlythMeister</a>\n
        GitHub: <a href="https://github.com/BlythMeister">@BlythMeister</a></string>
    <string name="authorize_twitter_account">Authorize Twitter Account</string>
    <string name="authorize_appdotnet_account">Authorize App.net Account</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_share">Share</string>
    <string name="action_manage_friendship">Manage Friendship</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_unfavorite">Unfavorite</string>
    <string name="action_retweet_unset">Unfavorite</string>
    <string name="action_block">Block User</string>
    <string name="action_report_for_spam">Report User for Spam</string>
    <string name="action_delete_status">Delete</string>
    <string name="action_retweet">Retweet</string>
    <string name="action_reply">Reply</string>
    <string name="action_message">Message</string>
    <string name="action_use_location">Use Location</string>
    <string name="action_take_photo">Take Photo</string>
    <string name="action_pick_photo">Pick Photo</string>
    <string name="action_save_to_gallery">Save image to Gallery</string>
    <string name="action_website">View on Website</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Prev</string>
    <string name="action_show_replies">Show Replies</string>
    <string name="action_hide_replies">Hide Replies</string>
    <string name="action_show_retweets">Show Retweets</string>
    <string name="action_hide_retweets">Hide Retweets</string>
    <string name="action_show_retweets_adn">Show Reposts</string>
    <string name="action_hide_retweets_adn">Hide Reposts</string>
    <string name="action_bar_tweet_compose_title">New Tweet</string>
    <string name="action_bar_tweet_compose_title_adn">New Post</string>
    <string name="action_bar_tweet_reply_compose_title">Reply</string>
    <string name="action_bar_direct_message_compose_title">New Direct Message</string>
    <string name="action_bar_search_title">Searching for</string>
    <string name="title_settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="via">via</string>
    <string name="new_tweet">New Tweet</string>
    <string name="new_tweets">New Tweets</string>
    <string name="new_post">New Post</string>
    <string name="new_posts">New Posts</string>
    <string name="no_more_content">~</string>
    <string name="load_more">Tap to load more</string>
    <string name="no_content_found">No content loaded at this time.</string>
    <string name="compose_tweet_default_hint">What\'s happening @</string>
    <string name="compose_tweet_to_user_hint">Tweet to</string>
    <string name="compose_tweet_to_user_hint_adn">Post at</string>
    <string name="compose_tweet_reply_to">Reply to</string>
    <string name="compose_tweet_finish">Send Tweet:</string>
    <string name="compose_tweet_finish_adn">Send Post:</string>
    <string name="compose_direct_message_default_hint">New Direct Message</string>
    <string name="compose_direct_message_finish">Send DM:</string>
    <string name="separator_more">More</string>
    <string name="add_account">Add Account</string>
    <string name="lane_user_home">Timeline</string>
    <string name="lane_user_tweets">My Tweets</string>
    <string name="lane_user_tweets_adn">My Posts</string>
    <string name="lane_user_retweets_of_me">Retweets of Me</string>
    <string name="lane_user_retweets_of_me_adn">Interactions</string>
    <string name="lane_user_favorites">My Favorites</string>
    <string name="lane_user_profile">My Profile</string>
    <string name="lane_user_mentions">\@ Mentions</string>
    <string name="lane_user_global_feed">Global Feed</string>
    <string name="lane_direct_messages">Direct Messages</string>
    <string name="lane_followers">Followers</string>
    <string name="lane_friends">Following</string>
    <string name="lane_profile_profile">Profile</string>
    <string name="lane_profile_tweets">Tweets</string>
    <string name="lane_profile_tweets_adn">Posts</string>
    <string name="lane_profile_mentions">\@ Mentions</string>
    <string name="lane_profile_favorites">Favorites</string>
    <string name="lane_search_tweets">Tweets</string>
    <string name="lane_search_tweets_adn">Posts</string>
    <string name="lane_search_people">People</string>
    <string name="lane_tweet_status">Tweet</string>
    <string name="lane_tweet_status_adn">Post</string>
    <string name="lane_tweet_conversation">Discussion</string>
    <string name="lane_tweet_favorited_by">Favorited By</string>
    <string name="lane_tweet_retweeted_by">Retweeted By</string>
    <string name="lane_tweet_retweeted_by_adn">Reposted By</string>
    <string name="status_count">Tweets</string>
    <string name="posts_count">Posts</string>
    <string name="friends_count">Following</string>
    <string name="following_count">Followers</string>
    <string name="favorites_count">Favorites</string>
    <string name="load_more_label">Tap to load more</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh&#8230;</string>
    <string name="pull_to_refresh_release_label">Release to refresh&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Loading&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh&#8230;</string>
    <string name="tweet_posted_success">Status posted</string>
    <string name="tweet_posted_error">Failed to post status</string>
    <string name="posting_tweet">Posting</string>
    <string name="posting_tweet_ongoing">Posting &#8230;</string>
    <string name="lost_position">The position on the feed has been lost</string>
    <string name="pottential_lost_position">The refresh was cancelled to stop position being lost</string>
    <string name="share_tweet">Tweet Text</string>
    <string name="tutorial_welcome_intro">Welcome to Tweet Lanes!</string>
    <string name="tutorial_welcome_middle">"Tweet Lanes contains some subtle enhancements over any
        Twitter or App.net app you've used previously.\n\nLet's very quickly run through the most
        unique features of the app."
    </string>
    <string name="tutorial_welcome_swipe">
        <i>« Swipe to continue</i>
    </string>
    <string name="tutorial_compose_tweet_intro">There are no New Update or Reply buttons in Tweet
        Lanes, nor does a new screen load when writing an update.
    </string>
    <string name="tutorial_compose_tweet_context_sensitive">Instead, status updates are created via
        the ever-present<i>Context Box</i>:
    </string>
    <string name="tutorial_compose_tweet_hint">\nThe
        <i>Context Box</i>
        is a new concept, but fear not. You will learn very quickly how simple it makes writing
        updates!
    </string>
    <string name="tutorial_compose_tweet_footer">\n(Keep an eye on the hint if you are ever
        unsure!)
    </string>
    <string name="tutorial_thanks_intro">Thank you for trying out Tweet Lanes!\n\nIf you like the
        app, be sure to click
        <i>Promote</i>
        to help spread the word about it.
    </string>
    <string name="tutorial_thanks_feedback">\nTweet Lanes is also completely open source, so if you
        want to contribute to it, please feel free to do so!\n\nMany thanks,
    </string>
    <string name="tutorial_thanks_signature">\nChris Lacy\n@chrismlacy\nAuthor, Tweet Lanes</string>
    <string name="tutorial_thanks_follow_checkbox">Follow @chrismlacy and @TweetLanes</string>
    <string name="tutorial_thanks_tos">By continuing, you accept the Tweet Lanes
        <a href="http://www.tweetlanes.com/termsofservice">Terms</a>
        and<a href="http://www.tweetlanes.com/privacy">Privacy Policy</a>.
    </string>
    <string name="tutorial_thanks_done_button">Take me to the app!</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_filter_feed">Filter Feed</string>
    <string name="action_bar_buy_alp">Get Action Launcher!</string>
    <string name="tutorial_no_tweet_description">There is no "New Tweet" button in Tweet Lanes.
    </string>
    <string name="new_account_intro">Tweet Lanes supports two different social networks: Twitter
        and App.net.
    </string>
    <string name="new_account_intro2">To add an account, sign into one of the following services:
    </string>
    <string name="new_account_twitter">Twitter</string>
    <string name="new_account_adn">App.net</string>
</resources>