<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <item android:id="@+id/action_reply"
      android:icon="@drawable/ic_action_reply"
      android:title="@string/action_reply"
      android:showAsAction="always" /> -->
    <item
            android:id="@+id/action_retweet"
            android:title="@string/action_retweet"
            android:showAsAction="always"
            style="?attr/ic_action_rt_off"/>
    <!-- Note: icon is set in code -->
    <item
            android:id="@+id/action_favorite"
            android:showAsAction="always"
            android:title="@string/action_favorite"
            />
    <item
            android:id="@+id/action_share"
            android:title="@string/action_share"
            style="?attr/ic_action_share"
            android:showAsAction="always"/>
    <item
            android:showAsAction="always"
            android:title="@string/more"
            style="?attr/ic_action_overflow">
        <menu>
            <!--
            <item android:id="@+id/action_manage_friendship"
              android:title="@string/action_manage_friendship"
              android:showAsAction="never" />	-->
            <item
                    android:id="@+id/action_block"
                    android:title="@string/action_block"
                    android:showAsAction="never"/>
            <item
                    android:id="@+id/action_report_for_spam"
                    android:title="@string/action_report_for_spam"
                    android:showAsAction="never"/>
            <item
                    android:id="@+id/action_delete_status"
                    android:title="@string/action_delete_status"
                    android:showAsAction="never"/>
        </menu>
    </item>

</menu>