<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <item android:id="@+id/action_reply"
      android:icon="@drawable/ic_action_reply"
      android:title="@string/action_reply"
      android:showAsAction="always" />
       -->

    <!-- Note: icon is set in code -->
    <item
            android:id="@+id/action_favorite"
            android:showAsAction="ifRoom"
            android:title="@string/action_favorite"
            />
    <item
            android:showAsAction="always"
            android:title="@string/more"
            style="?attr/ic_action_overflow">
        <menu>
            <item
                    android:id="@+id/action_manage_friendship"
                    android:title="@string/action_manage_friendship"
                    android:showAsAction="never"/>
            <item
                    android:id="@+id/action_block"
                    android:title="@string/action_block"
                    android:showAsAction="never"/>
            <item
                    android:id="@+id/action_report_for_spam"
                    android:title="@string/action_report_for_spam"
                    android:showAsAction="never"/>
        </menu>
    </item>

</menu>
