<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_scroll_view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:layout_height="match_parent"
        >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="@dimen/tutorial_horizontal_padding"
                  android:paddingRight="@dimen/tutorial_horizontal_padding"
                  android:paddingTop="@dimen/tutorial_vertical_padding"
                  android:paddingBottom="@dimen/tutorial_vertical_padding"
                  android:orientation="vertical">

        <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_compose_tweet_intro"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/tutorial_text_size"
                android:paddingBottom="4dp"/>

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/tutorial_no_tweet_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:src="@drawable/tutorial_no_tweet_button"
                    android:contentDescription="@string/tutorial_no_tweet_description"/>
        </RelativeLayout>

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:text="@string/tutorial_compose_tweet_context_sensitive"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/tutorial_text_size"/>

        <ImageView
                android:id="@+id/tutorial_compose_tweet_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tutorial_compose_tweet_new"
                android:background="@drawable/attachment_selector"
                android:adjustViewBounds="true"
                android:contentDescription="@string/tutorial_no_tweet_description"/>

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_compose_tweet_hint"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/tutorial_text_size"/>

        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_compose_tweet_footer"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14dp"/>

    </LinearLayout>
</ScrollView>