<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_scroll_view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:layout_height="match_parent"
        >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:paddingLeft="@dimen/tutorial_horizontal_padding"
                  android:paddingRight="@dimen/tutorial_horizontal_padding"
                  android:paddingTop="@dimen/tutorial_vertical_padding"
                  android:paddingBottom="@dimen/tutorial_vertical_padding"
                  android:orientation="vertical">

        <TextView
                android:id="@+id/bioTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tutorial_text_size"
                android:text="@string/tutorial_welcome_intro"/>

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:src="@drawable/logo_full"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    />

        </RelativeLayout>

        <TextView
                android:id="@+id/bioTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:textSize="@dimen/tutorial_text_size"
                android:text="@string/tutorial_welcome_middle"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial_welcome_swipe"
                    android:textSize="12dp"
                    android:gravity="right"
                    android:textColor="@color/text_hairline"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_alignParentBottom="true"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
